k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gpi-tracker
  labels:
    app.kubernetes.io/name: gpi-tracker
    app.kubernetes.io/part-of: swift-gpi-tracker
