k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gpi-tracker-svc
  namespace: gpi-tracker
  labels:
    app: gpi-tracker
    app.kubernetes.io/name: gpi-tracker
    app.kubernetes.io/component: service
spec:
  type: NodePort
  selector:
    app: gpi-tracker
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8501
